regex! This way I can easily extract ints from oddly formatted lines.